# oto-factory

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_DESIGN.md  README_FRONTEND.md  claude_plan.md  codex_plan.md  design_codex.md  design_markdown.md  install.md  mac-connection-guide.md  mac-ssh-config-example.txt  pyproject.toml  ssh-forwarding-guide.md
backend/: __init__.py  config.py  main.py
backend/models/: __init__.py  schemas.py
backend/routers/: generate.py
backend/services/: __init__.py  job_store.py  music_generator.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: audio-player.tsx  generation-form.tsx  job-status-card.tsx  screen-shell.tsx
frontend/hooks/: use-audio-playback.ts  use-generation-job.ts  use-loop-generation.ts
frontend/lib/: api.ts  format.ts  types.ts
prototype/: CHANGELOG.md  README.md  ace_client.py  app.py  config.py  generator_loop.py  player.py  test_api.py  test_prototype.py  test_single_segment.py  web_ui.py
prototype/templates/: index.html
