[project]
name = "oto-factory"
version = "0.1.0"
description = "作業音リアルタイム生成バックエンド"
requires-python = "==3.11.*"
dependencies = [
    "ace-step",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7.3",
]

[tool.uv.sources]
ace-step = { path = "./ACE-Step-1.5", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
oto-backend = "backend.main:cli_main"
